--- a/deskripsi/judul.tex
+++ b/deskripsi/judul.tex
@@ -1,30 +1,15 @@
 % Ubah kalimat berikut sesuai dengan judul penelitian.
-\title{Kalkulasi Energi pada Roket Luar Angkasa \\ Berbasis \emph{Anti-Gravitasi}}
+\title{Estimasi Umur, Gender dan Ras menggunakan \emph{Convolutional Neural Network} Berbasis Citra Wajah} 
+
 
 % Ubah kalimat-kalimat berikut sesuai dengan nama, institusi, alamat dan kontak penulis.
 \author{
-  \IEEEauthorblockN{Elon Reeve Musk}
-  \IEEEauthorblockA{Departemen Teknik Dirgantara\\
-    Fakultas Teknologi Dirgantara\\
+  \IEEEauthorblockN{Fathullah Auzan Setyo Laksono}
+  \IEEEauthorblockA{Departemen Teknik Komputer\\
+    Fakultas Teknologi Elektro dan Informatika Cerdas\\
     Institut Teknologi Sepuluh Nopember\\
     Surabaya, Indonesia 60111\\
-    elon.musk@mhs.its.ac.id}
-
-  \and
-  \IEEEauthorblockN{Nikola Tesla}
-  \IEEEauthorblockA{Departemen Teknik Dirgantara\\
-    Fakultas Teknologi Dirgantara\\
-    Institut Teknologi Sepuluh Nopember\\
-    Surabaya, Indonesia 60111\\
-    \url{https://nikolatesla.me}}
-
-  \and
-  \IEEEauthorblockN{Wernher von Braun}
-  \IEEEauthorblockA{Departemen Teknik Dirgantara\\
-    Fakultas Teknologi Dirgantara\\
-    Institut Teknologi Sepuluh Nopember\\
-    Surabaya, Indonesia 60111\\
-    von.braun@td.its.ac.id}
+    fathullah.18072@mhs.its.ac.id}
 }
 
 % Digunakan untuk menampilkan judul dan deskripsi penulis.
