--- a/konten/1-pendahuluan.tex
+++ b/konten/1-pendahuluan.tex
@@ -4,9 +4,23 @@
 
 % Ubah paragraf-paragraf pada bagian ini sesuai dengan yang diinginkan.
 
-Pesatnya perkembangan roket yang merupakan \lipsum[2-4]
-
-Pembahasan pada paper ini dimulai dengan presentasi mengenai penelitian lain (Bagian \ref{sec:penelitianterkait}).
-Kemudian dilanjutkan dengan penjelasan mengenai arsitektur dari sistem yang dibuat (Bagian \ref{sec:arsitektur}).
-Berdasarkan hal tersebut, kami menunjukkan lorem ipsum (Bagian \ref{sec:loremipsum}).
-Terakhir, didapatkan kesimpulan dari penelitian yang telah dilakukan (Bagian \ref{sec:kesimpulan}).
+Umur, gender dan etnik merupakan beberapa hal penting dalam wajah yang menentukan bagaimana seorang 
+individu berinteraksi sosial. Setiap bahasa di dunia memiliki panggilan kehormatan yang berbeda-beda 
+untuk pria dan wanita, perbedaan umur juga dapat menentukan bagaimana seseorang harus bersikap dengan 
+orang yang lebih muda ataupun dengan yang lebih tua, sedangkan etnik juga dapat menentukan cara berbahasa 
+dan berperilaku pada seseorang. Kebiasaan dan sikap tersebut sebagian besar tergantung pada kemampuan 
+seseorang dalam memperkirakan atau mengestimasi individu tersebut melalui penampakan gender, umur dan 
+etnik. Dimana identitas, ekspresi, gender, umur dan etnik disebut dengan fitur dalam wajah. \par
+Selain itu, fitur dalam wajah juga sering digunakan di berbagai bidang, seperti di kepolisian untuk 
+mencari pelaku tindak kriminal yang mengidentifkasi pelaku dari wajah. diagnosa medis yang menggunakan 
+wajah untuk menentukan penanganan yang cocok untuk pasien. Di dunia bisnis fitur wajah juga digunakan 
+dalam pembagian target pasar untu lebih meningkatkan proses bisnis. \par
+Hal ini membuat identifikasi umur, gender dan etnik dapat sangat berguna dalam banyak pengimplementasian 
+ilmu seperti pengamatan visual, diagnosa medis, sistem interaksi komputer manusia, biometrik, pengumpulan 
+informasi, penegakan hukum, pemasaran dan banyak lainnya. Dimana sebagian besar data mengenai fitur wajah 
+tersebut masih diambil secara manual melalui survei ataupun pengamatan pada banyak individu. \par
+Berdasarkan \textit{World Population Clock} pada websitenya, di dunia terdapat lebih dari 7 miliar orang yang 
+tersebar di berbagai macam pulau dan benua. Jumlah tersebut masih terus bertambah sampai sekarang \citep{Worldometer}.
+Dimana di setiap benua dan negara tersebut terdapat berbagai karakteristik dan ciri manusia yang berbeda 
+dengan kata lain Etnik yang berbeda-beda \citep{Infoplease}. Dengan banyaknya jumlah penduduk dan keberagamannya tersebut, 
+jika data fitur wajah diambil secara manual akan memakan waktu dan tenaga yang banyak.
