--- a/konten/2-penelitian-terkait.tex
+++ b/konten/2-penelitian-terkait.tex
@@ -4,13 +4,18 @@
 
 % Ubah paragraf-paragraf pada bagian ini sesuai dengan yang diinginkan.
 
-Beberapa penelitian lain pernah dilakukan seperti yang dirumuskan oleh \citet{newton1687} bahwa \lipsum[5]
-Hasil tersebut kemudian menjadi persamaan \ref{eq:hukumpertama}.
-
-% Contoh pembuatan persamaan ilmiah.
-\begin{equation}
-  \label{eq:hukumpertama}
-  \sum \mathbf{F} = 0\; \Leftrightarrow\; \frac{\mathrm{d} \mathbf{v} }{\mathrm{d}t} = 0.
-\end{equation}
-
-\lipsum[6-7]
+Berberapa penelitian yang telah dilakukan terkait dengan judul Tugas Akhir ini antara lain dilakukan oleh 
+A. Garain et al. \textit{GRANet A Deep Learning Model for Classification of Age and GenderFrom Facial Images}. 
+Dimana pada penelitian tersebut mencoba menggunakan beberapa dataset seperti wikipedia age dataset, 
+FG-Net, AFAD, AduenceDB dataset dan UTKFace dataset serta menggunakan model yang arsitekturnya seperti 
+\textit{Residual Attention Network} dengan tambahan parameter \textit{Gate} seperti pada \textit{Gated Residual Units (GRU’s)}. 
+Yang berhasil melakukan prediksi umur dan gender dengan baik. Namun belum menggunakan pendeteksian etnik\citep{Granet}. 
+Penelitian lainnya dilakukan oleh G. Guo et al. dengan judul \textit{Human Age Estimation What is the Influence 
+Across Race and Gender} yang menggunakan database MORPH-II dengan data gambar wajah sebanyak 55.000. 
+Mereka membandingkan hasil estimasi umur antara individu dengan sesama etnik dan dengan yang berbeda 
+etnik. Didapatkan tingkat eror yang signifikan pada percobaan estimasi individu  yang  berbeda etnik\citep{AgeGender}. 
+Kemudian penelitian oleh M. Shin et al. \textit{Face Image-Based Age and Gender Estimation with Consideration of 
+Ethnic Difference}, pada penelitian ini menggunakan \textit{CNN} dan \textit{SVM} yang berfungsi memisahkan dua etnik 
+menjadi Asia dan Non Asia yang kemudian hasilnya digunakan untuk mendeteksi umur dan gender dari wajah 
+yang diberikan. Dihasilkan bahwa pemisahan etnik dapat meningkatkan keakuratan estimasi umur, namun tidak 
+berpengaruh pada gender\citep{HumanAgeEst}.
