--- a/deskripsi/abstrak.tex
+++ b/deskripsi/abstrak.tex
@@ -5,7 +5,22 @@
 \begin{abstract}
 
   % Ubah paragraf berikut sesuai dengan abstrak dari penelitian.
-  Pada penelitian ini kami mengajukan \lipsum[1][1-12]
+  Fitur wajah seperti identifikasi umur, gender dan etnik dapat sangat berguna 
+  dalam banyak pengimplementasian ilmu seperti pengamatan visual, diagnosa medis, 
+  sistem interaksi komputer manusia, biometric, pengumpulan informasi, penegakan 
+  hukum, pemasaran dan banyak lainnya. Dimana sebagian besar data mengenai fitur 
+  wajah tersebut masih diambil secara manual melalui survei ataupun pengamatan 
+  pada banyak individu. Berdasarkan World Population Clock pada websitenya, di 
+  dunia terdapat lebih dari 7 miliar orang yang tersebar di berbagai macam pulau 
+  dan benua. Jumlah tersebut masih terus bertambah sampai sekarang. Dimana di 
+  setiap benua dan negara tersebut terdapat berbagai karakteristik dan ciri 
+  manusia yang berbeda dengan kata lain Etnik yang berbeda-beda. Dengan banyaknya 
+  jumlah penduduk dan keberagamannya tersebut, jika data fitur wajah diambil 
+  secara manual akan memakan waktu dan tenaga yang banyak. Oleh karena itu perlu 
+  dibuat suatu sistem yang dapat mengestimasi umur, gender dan etnik serta 
+  menyimpan penghitungan datanya untuk mempermudah pengumpulan data. Dimana 
+  kamera akan menangkap gambar dari seseorang dan dilakukan proses estimasi 
+  umur, gender dan etnik yang kemudian datanya disimpan untuk digunakan kedepannya.
 
 \end{abstract}
 
@@ -16,6 +31,6 @@
 \begin{IEEEkeywords}
 
   % Ubah kata-kata berikut sesuai dengan kata kunci dari penelitian.
-  Roket, Anti-gravitasi, Energi, Angkasa.
+  \emph{CNN}, Umur, Gender, Ras, Citra, Wajah.
 
 \end{IEEEkeywords}
