--- a/konten/4-lorem-ipsum.tex
+++ b/konten/4-lorem-ipsum.tex
@@ -1,5 +1,5 @@
 % Ubah judul dan label berikut sesuai dengan yang diinginkan.
-\section{Lorem ipsum}
+\section{Pengujian dan Analisis}
 \label{sec:loremipsum}
 
 % Ubah paragraf-paragraf pada bagian ini sesuai dengan yang diinginkan.
