--- a/pustaka/pustaka.bib
+++ b/pustaka/pustaka.bib
@@ -5,16 +5,121 @@ disediakan oleh penyedia sumber referensi secara online dan bisa langsung ditaru
 Lihat https://www.bibtex.com/g/bibtex-format/ untuk informasi lebih lanjut mengenai format
 BibTex yang digunakan pada file ini.
 
-@article{newton1687,
-  author  = {Isaac Newton},
-  journal = {Philosophiæ Naturalis Principia Mathematica},
-  title   = {Axioms or Laws of Motion},
-  year    = {1687}
+@online{Worldometer, 
+    author = {Worldometer},
+    title = {World Population Clock},
+    year = 2021,
+    url = {https://www.worldometers.info/world-population},
+    urldate = {31- Oct- 2021}
 }
 
-@misc{cetakbiruspacex,
-  title   = {Cetak Biru Space X},
-  url     = {https://id.pinterest.com/pin/344032859037191430/},
-  urldate = {2021-05-18},
-  year    = {2021}
+@online{Infoplease, 
+    author = {Infoplease},
+    title = {Ethnicity and Race by Country},
+    year = 2021,
+    url = {https://www.infoplease.com/world/social-statistics/ethnicity-and-race-countries},
+    urldate = {30- Oct- 2021}
+}
+
+@ARTICLE{Granet,
+  author={Garain Avishek et al},
+  journal={IEEE Access}, 
+  title={GRANet A Deep Learning Model for Classification of Age and Gender From Facial Images}, 
+  year={2021},
+  volume={9},
+  pages={85672-85689},
+  doi={10.1109/ACCESS.2021.3085971}
+}
+
+@ARTICLE{AgeGender,
+  author={A. Abu Nada et al}, 
+  title={Age and Gender Prediction and Validation Through Single User Images Using CNN}, 
+  year={2021},
+  url = {http://dstore.alazhar.edu.ps/xmlui/handle/123456789/632},
+  urldate = {06- Dec- 2021}
+}
+
+@INPROCEEDINGS{HumanAgeEst,
+  author={Guo Guodong and Mu Guowang},
+  booktitle={2010 IEEE Computer Society Conference on Computer Vision and Pattern Recognition - Workshops}, 
+  title={Human age estimation: What is the influence across race and gender?}, 
+  year={2010},
+  volume={},
+  number={},
+  pages={71-78},
+  doi={10.1109/CVPRW.2010.5543609}
+}
+
+@ARTICLE{MasaTubuh,
+  author={I. G. P. Ngurah Adi},
+  booktitle={Jurnal Pendidikan Kesehatan Rekreasi}, 
+  title={HUBUNGAN INDEKS MASSA TUBUH (IMT) DAN UMUR TERHADAP DAYA TAHAN UMUM (KARDIOVASKULER) MAHASISWA PUTRA SEMESTER II KELAS A FAKULTAS PENDIDIKAN OLAHRAGA DAN KESEHATAN IKIP PGRI BALI TAHUN 2014}, 
+  year={2015},
+  volume={1},
+  number={}
+}
+
+@ARTICLE{LanguageGender,
+  author={P. Eckert and S. McConnell-Ginet},
+  booktitle={Cambridge University Press}, 
+  title={Language and gender}, 
+  year={2003}
+}
+
+@ARTICLE{Ethnicity,
+  author={T. Eriksen},
+  booktitle={10.1002/9780470670590.wbeog179 }, 
+  title={The Wiley-Blackwell Encyclopedia of Globalization}, 
+  year={2012}
+}
+
+@INPROCEEDINGS{MachineVisionMachineLearning,
+  author={P. Y. Chen et al},
+  booktitle={International Conference on Applied Electronics (AE)}, 
+  title={Implement of a 6-DOF manipulator with machine vision and machine learning algorithms}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1-5},
+  doi={10.23919/AE.2017.8053583}
+}
+
+@ARTICLE{MachineLearning,
+  author={E. Alpaydin},
+  booktitle={The MIT Press}, 
+  title={Introduction to Machine Learning}, 
+  year={2004}
+}
+
+@ARTICLE{DeepLearning,
+  author={J. W. G. Putra},
+  booktitle={}, 
+  title={Pengenalan Konsep Pembelajaran Mesin dan Deep Learning}, 
+  year={2019}
+}
+
+@INPROCEEDINGS{CNN,
+  author={R. S. I Wayan Suartika et al},
+  booktitle={JURNAL TEKNIK ITS}, 
+  title={Klasifikasi citra menggunakan convolutional neural network (cnn) pada caltech 101}, 
+  year={2016},
+  volume={5},
+  number={1},
+  pages={},
+  doi={}
+}
+
+@ARTICLE{ImageProcesing,
+  author={V. Tyagi},
+  booktitle={CRC Press}, 
+  title={Understanding Digital Image Processingg}, 
+  year={2018}
+}
+
+@ARTICLE{UTKFace,
+  author={S. Sanjaya},
+  title={Kaggle-UTKFace Dataset}, 
+  year = 2018,
+  url = {https://www.kaggle.com/jangedoo/utkface-new},
+  urldate = {17- Oct- 2021}
 }
