--- a/deskripsi/judul.tex
+++ b/deskripsi/judul.tex
@@ -6,11 +6,32 @@
 \author{
   \IEEEauthorblockN{Fathullah Auzan Setyo Laksono}
   \IEEEauthorblockA{Departemen Teknik Komputer\\
-    Fakultas Teknologi Elektro dan Informatika Cerdas\\
+    Fakultas Teknologi Elektro\\
+    dan Informatika Cerdas\\
     Institut Teknologi Sepuluh Nopember\\
     Surabaya, Indonesia 60111\\
     fathullah.18072@mhs.its.ac.id}
+
+  \and
+  \IEEEauthorblockN{Reza Fuad Rachmadi}
+  \IEEEauthorblockA{Departemen Teknik Komputer\\
+    Fakultas Teknologi Elektro\\
+    dan Informatika Cerdas\\
+    Institut Teknologi Sepuluh Nopember\\
+    Surabaya, Indonesia 60111\\
+    fuad@its.ac.id}
+
+  \and
+  \IEEEauthorblockN{Dr. Eko Mulyanto Yuniarno}
+  \IEEEauthorblockA{Departemen Teknik Komputer\\
+    Fakultas Teknologi Elektro\\
+    dan Informatika Cerdas\\
+    Institut Teknologi Sepuluh Nopember\\
+    Surabaya, Indonesia 60111\\
+    ekomulyanto@ee.its.ac.id}
 }
+
+
 
 % Digunakan untuk menampilkan judul dan deskripsi penulis.
 \maketitle
