--- a/pustaka/pustaka.bib
+++ b/pustaka/pustaka.bib
@@ -5,7 +5,50 @@ disediakan oleh penyedia sumber referensi secara online dan bisa langsung ditaru
 Lihat https://www.bibtex.com/g/bibtex-format/ untuk informasi lebih lanjut mengenai format
 BibTex yang digunakan pada file ini.
 
-@online{Worldometer, 
+@misc{precission_recall_f1score, 
+    author = {Stevanus Setiawan},
+    title = {Membicarakan Precission, Recall dan F1-Score},
+    year = 2020,
+    url = {https://stevkarta.medium.com/membicarakan-precision-recall-dan-f1-score-e96d81910354},
+    urldate = {28- Apr- 2022}
+}
+
+@misc{szegedy_vanhoucke_ioffe_shlens_wojna_2015, 
+      title={Rethinking the inception architecture for computer vision}, 
+      url={https://arxiv.org/abs/1512.00567}, 
+      journal={arXiv.org}, 
+      author={Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jonathon and Wojna, Zbigniew}, 
+      year={2015}, 
+      month={Dec}
+} 
+@misc{tan_le_2020, 
+      title={EfficientNet: Rethinking model scaling for Convolutional Neural Networks}, 
+      url={https://arxiv.org/abs/1905.11946}, 
+      journal={arXiv.org}, 
+      author={Tan, Mingxing and Le, Quoc V.}, 
+      year={2015}, 
+      month={Apr}
+} 
+
+@misc{simonyan_zisserman_2015, 
+      title={Very deep convolutional networks for large-scale image recognition}, 
+      url={https://arxiv.org/abs/1409.1556}, 
+      journal={arXiv.org}, 
+      author={Simonyan, Karen and Zisserman, Andrew}, 
+      year={2015}, 
+      month={Apr}
+} 
+
+@misc{he_zhang_ren_sun_2015, 
+      title={Deep residual learning for image recognition}, 
+      url={https://arxiv.org/abs/1512.03385}, 
+      journal={arXiv.org}, 
+      author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian}, 
+      year={2015}, 
+      month={Dec}
+} 
+
+@misc{worldometer, 
     author = {Worldometer},
     title = {World Population Clock},
     year = 2021,
@@ -13,7 +56,7 @@ BibTex yang digunakan pada file ini.
     urldate = {31- Oct- 2021}
 }
 
-@online{Infoplease, 
+@misc{infoplease, 
     author = {Infoplease},
     title = {Ethnicity and Race by Country},
     year = 2021,
@@ -22,7 +65,7 @@ BibTex yang digunakan pada file ini.
 }
 
 @ARTICLE{Granet,
-  author={Garain Avishek et al},
+  author={Garain Avishek},
   journal={IEEE Access}, 
   title={GRANet A Deep Learning Model for Classification of Age and Gender From Facial Images}, 
   year={2021},
@@ -32,8 +75,9 @@ BibTex yang digunakan pada file ini.
 }
 
 @ARTICLE{AgeGender,
-  author={A. Abu Nada et al}, 
+  author={A. Abu Nada}, 
   title={Age and Gender Prediction and Validation Through Single User Images Using CNN}, 
+  journal={Age and Gender Prediction and Validation Through Single User Images Using CNN}, 
   year={2021},
   url = {http://dstore.alazhar.edu.ps/xmlui/handle/123456789/632},
   urldate = {06- Dec- 2021}
@@ -50,7 +94,7 @@ BibTex yang digunakan pada file ini.
   doi={10.1109/CVPRW.2010.5543609}
 }
 
-@ARTICLE{MasaTubuh,
+@INPROCEEDINGS{MasaTubuh,
   author={I. G. P. Ngurah Adi},
   booktitle={Jurnal Pendidikan Kesehatan Rekreasi}, 
   title={HUBUNGAN INDEKS MASSA TUBUH (IMT) DAN UMUR TERHADAP DAYA TAHAN UMUM (KARDIOVASKULER) MAHASISWA PUTRA SEMESTER II KELAS A FAKULTAS PENDIDIKAN OLAHRAGA DAN KESEHATAN IKIP PGRI BALI TAHUN 2014}, 
@@ -61,20 +105,20 @@ BibTex yang digunakan pada file ini.
 
 @ARTICLE{LanguageGender,
   author={P. Eckert and S. McConnell-Ginet},
-  booktitle={Cambridge University Press}, 
+  journal={Cambridge University Press}, 
   title={Language and gender}, 
   year={2003}
 }
 
 @ARTICLE{Ethnicity,
   author={T. Eriksen},
-  booktitle={10.1002/9780470670590.wbeog179 }, 
+  journal={10.1002/9780470670590.wbeog179 }, 
   title={The Wiley-Blackwell Encyclopedia of Globalization}, 
   year={2012}
 }
 
 @INPROCEEDINGS{MachineVisionMachineLearning,
-  author={P. Y. Chen et al},
+  author={P. Y. Chen},
   booktitle={International Conference on Applied Electronics (AE)}, 
   title={Implement of a 6-DOF manipulator with machine vision and machine learning algorithms}, 
   year={2017},
@@ -86,37 +130,35 @@ BibTex yang digunakan pada file ini.
 
 @ARTICLE{MachineLearning,
   author={E. Alpaydin},
-  booktitle={The MIT Press}, 
+  journal={The MIT Press}, 
   title={Introduction to Machine Learning}, 
   year={2004}
 }
 
 @ARTICLE{DeepLearning,
   author={J. W. G. Putra},
-  booktitle={}, 
+  journal={Pengenalan Konsep Pembelajaran Mesin dan Deep Learning}, 
   title={Pengenalan Konsep Pembelajaran Mesin dan Deep Learning}, 
   year={2019}
 }
 
 @INPROCEEDINGS{CNN,
-  author={R. S. I Wayan Suartika et al},
+  author={R. S. I Wayan Suartika},
   booktitle={JURNAL TEKNIK ITS}, 
   title={Klasifikasi citra menggunakan convolutional neural network (cnn) pada caltech 101}, 
   year={2016},
-  volume={5},
-  number={1},
   pages={},
   doi={}
 }
 
 @ARTICLE{ImageProcesing,
   author={V. Tyagi},
-  booktitle={CRC Press}, 
+  journal={CRC Press}, 
   title={Understanding Digital Image Processingg}, 
   year={2018}
 }
 
-@ARTICLE{UTKFace,
+@misc{UTKFace,
   author={S. Sanjaya},
   title={Kaggle-UTKFace Dataset}, 
   year = 2018,
