--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,8 @@
 % Digunakan untuk menampilkan gambar pada dokumen.
 \usepackage{graphicx}
 
+\usepackage[table,xcdraw]{xcolor}
+
 % Digunakan untuk menampilkan potongan kode.
 \usepackage{listings}
 \lstset{
